--- a/ZTApp/src/styles.scss
+++ b/ZTApp/src/styles.scss
@@ -1,1 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
+@import "primeicons/primeicons.css";
+:root{
+    
+    --font-family: "Inter var", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+*{
+    font-family: var(--font-family);
+}
